--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.3",
     "firebase": "^8.9.1",
     "geofirestore": "^4.4.2",
     "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.4",
@@ -46,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dart-sass": "^1.25.0",
+    "sass": "^1.48.0"
   }
 }
