--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.4.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "firebase": "^8.9.1",
     "geofirestore": "^4.4.2",
+    "holderjs": "^2.9.9",
     "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
