--- a/package.json
+++ b/package.json
@@ -3,31 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.3.1",
-    "@mui/material": "^5.4.0",
-    "@testing-library/jest-dom": "^5.14.1",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.0",
+    "@mui/material": "^5.5.0",
+    "@opuscapita/react-dates": "^0.5.16",
+    "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
-    "firebase": "^8.9.1",
+    "firebase": "^8.10.1",
     "geofirestore": "^4.4.2",
     "holderjs": "^2.9.9",
-    "materialize-css": "^1.0.0-rc.2",
+    "materialize-css": "^1.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.1.0",
+    "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
     "react-places-autocomplete": "^7.3.0",
-    "react-redux": "^7.2.4",
-    "react-redux-firebase": "^3.10.0",
-    "react-router-dom": "^5.2.0",
+    "react-redux": "^7.2.6",
+    "react-redux-firebase": "^3.11.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "react-select": "^5.0.0",
-    "redux": "^4.1.1",
-    "redux-firestore": "^0.15.0",
-    "redux-thunk": "^2.3.0",
+    "react-select": "^5.2.2",
+    "react-time-picker": "^4.5.0",
+    "redux": "^4.1.2",
+    "redux-firestore": "^0.15.2",
+    "redux-thunk": "^2.4.1",
+    "sassy-datepicker": "^0.8.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -56,6 +59,6 @@
   },
   "devDependencies": {
     "dart-sass": "^1.25.0",
-    "sass": "^1.48.0"
+    "sass": "^1.49.9"
   }
 }
