--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.5.0",
-    "@opuscapita/react-dates": "^0.5.16",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -15,16 +14,17 @@
     "firebase": "^8.10.1",
     "geofirestore": "^4.4.2",
     "holderjs": "^2.9.9",
-    "materialize-css": "^1.0.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
+    "react-country-region-selector": "^3.4.0",
+    "react-country-select-component": "^1.0.2",
     "react-dom": "^17.0.2",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.6",
     "react-redux-firebase": "^3.11.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.2.2",
     "react-time-picker": "^4.5.0",
     "redux": "^4.1.2",
