--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "better-docs": "^2.7.2",
     "bootstrap": "^5.1.3",
     "firebase": "^8.10.1",
     "geofirestore": "^4.4.2",
     "holderjs": "^2.9.9",
+    "jsdoc": "^3.6.11",
     "moment": "^2.29.1",
+    "parcel": "^2.7.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
     "react-country-region-selector": "^3.4.0",
@@ -37,7 +41,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "docs": "jsdoc -c jsdoc.conf.json"
   },
   "eslintConfig": {
     "extends": [
@@ -59,6 +64,7 @@
   },
   "devDependencies": {
     "dart-sass": "^1.25.0",
+    "process": "^0.11.10",
     "sass": "^1.49.9"
   }
 }
