--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "better-docs": "^2.7.2",
     "bootstrap": "^5.1.3",
     "firebase": "^8.10.1",
+    "formik": "^2.2.9",
     "geofirestore": "^4.4.2",
     "holderjs": "^2.9.9",
     "jsdoc": "^3.6.11",
@@ -35,7 +36,8 @@
     "redux-firestore": "^0.15.2",
     "redux-thunk": "^2.4.1",
     "sassy-datepicker": "^0.8.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
