--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "redux-firestore": "^0.15.2",
     "redux-thunk": "^2.4.1",
     "sassy-datepicker": "^0.8.0",
+    "styled-components": "^5.3.6",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
   },
