--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "parcel": "^2.7.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
+    "react-big-calendar": "^1.6.8",
     "react-bootstrap": "^2.2.0",
     "react-country-region-selector": "^3.4.0",
     "react-country-select-component": "^1.0.2",
