--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.2",
     "react-big-calendar": "^1.6.8",
     "react-bootstrap": "^2.2.0",
+    "react-bootstrap-icons": "^1.10.2",
     "react-country-region-selector": "^3.4.0",
     "react-country-select-component": "^1.0.2",
     "react-dom": "^17.0.2",
